@startuml
class Plattler{
    id: int
    name: String
    alter: int
}
class Probe{
    ort: String
    anzahlAnPlattler: int
    plattler: String
}
class Auftritt{
    ort: String
    anzahlAnPlattler: int
    verdienst: int
    plattler: String
}
class Ausflug{
    startDatum: DateTime
    endDatum: DateTime
    ort: String
    anzahlAnPlattler: int
}

class Probevorgang{
    DateTime: datum
    anmeldungFuerProbe: boolean
}

class Auftrittvorgang{
    startDatum: DateTime
    endDatum: DateTime
    anmeldungFuerProbe: boolean
}
Plattler "*" -- "*" Probe: > meldet sich an oder ab
Plattler "*" -- "*" Auftritt: > meldet sich an oder ab
Plattler "*" -- "1" Ausflug: > hat sich zu einen Auflug angemeldet
(Plattler, Probe) .. Probevorgang
(Plattler, Auftritt) .. Auftrittvorgang
@enduml